# itpro

./: integration_plan.md  isu-brs-endpoints.md
backend/: REVIEW.md  ЗАЩИТА.md  Заметки.md
backend/smartcampus-api/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum
bot/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  swagger.yml  telegram-bot-generator-prompt.md
bot/app/: bot.py  config.py  logging.py  main.py
bot/app/api/: __init__.py  ai.py  analytics.py  auth.py  bookings.py  campus.py  client.py  faq.py  library.py  notifications.py  privacy.py  rooms.py  schedule.py
bot/app/handlers/: __init__.py  _helpers.py  ai.py  analytics.py  auth.py  bookings.py  campus.py  errors.py  faq.py  library.py  main_menu.py  notifications.py  profile.py  rooms.py  schedule.py  start.py
bot/app/keyboards/: ai.py  analytics.py  auth.py  bookings.py  campus.py  common.py  faq.py  library.py  main.py  profile.py  rooms.py  schedule.py
bot/app/middlewares/: auth.py  logging.py  throttling.py
bot/app/services/: message_format.py  pagination.py  session_store.py
bot/app/states/: auth.py  booking.py  search.py
bot/tests/: test_ai_chat.py  test_api_client.py  test_formatters.py  test_keyboards.py  test_proxy_config.py  test_schedule_api.py  test_session_store.py
frontend/: ЗАМЕТКИ.MD
frontend/ggntu-web/: README.md  package-lock.json  package.json
frontend/smart-campus/: .dockerignore  .gitignore  DOCKER.md  Dockerfile  (+9 more)
presentation/: README.md  index.html
(+194 files in other folders)
